deploy: 2361c989e927e232b06c7fc3b71e97cc4d053b55

--- a/index.html
+++ b/index.html
@@ -7463,7 +7463,7 @@ penalty.</p>
 <td>Integer</td>
 <td>No</td>
 <td>order type code list filter</td>
-<td>Marketranslation missing: en.1, Limitranslation missing: en.2, Stop(3), StopLimitranslation missing: en.4, MarketIfTouched(5), LimitIfTouched(6), ProtectedMarketranslation missing: en.7, MarketAsLimitranslation missing: en.8, StopAsLimitranslation missing: en.9, MarketIfTouchedAsLimitranslation missing: en.10, Bracketranslation missing: en.11, BoTpLimitranslation missing: en.12, BoSlLimitranslation missing: en.13, BoSlMarketranslation missing: en.14</td>
+<td>Market (1), Limit (2), Stop (3), StopLimit (4), MarketIfTouched (5), LimitIfTouched (6), ProtectedMarket (7), MarketAsLimit (8), StopAsLimit (9), MarketIfTouchedAsLimit (10), Bracket (11), BoTpLimit (12), BoSlLimit (13), BoSlMarket (14)</td>
 </tr>
 <tr>
 <td>start</td>
@@ -7534,7 +7534,7 @@ penalty.</p>
 <td>orderType</td>
 <td>Integer</td>
 <td>order type code</td>
-<td>Marketranslation missing: en.1,Limitranslation missing: en.2,Stop(3),StopLimitranslation missing: en.4,MarketIfTouched(5),LimitIfTouched(6)</td>
+<td>Market (1),Limit (2),Stop(3),StopLimit (4),MarketIfTouched(5),LimitIfTouched(6)</td>
 </tr>
 <tr>
 <td>ordStatus</td>
@@ -7725,7 +7725,7 @@ penalty.</p>
 <td>orderType</td>
 <td>Integer</td>
 <td>order type code</td>
-<td>Marketranslation missing: en.1,Limitranslation missing: en.2,Stop(3),StopLimitranslation missing: en.4,MarketIfTouched(5),LimitIfTouched(6)</td>
+<td>Market (1),Limit (2),Stop(3),StopLimit (4),MarketIfTouched (5),LimitIfTouched (6)</td>
 </tr>
 <tr>
 <td>ordStatus</td>
