deploy: b9ec42c04a3b700b3f3ee0555d228d136adc5876

--- a/index.html
+++ b/index.html
@@ -1356,9 +1356,9 @@
 <li>WebSocket API base endpoints:
 
 <ul>
-<li>Default endpoint: <strong>wss://phemex.com/ws</strong></li>
+<li>Default endpoint: <strong>wss://api.phemex.com/md</strong></li>
 <li>High ratelimit endpoint: <strong>wss://vapi.phemex.com/ws</strong></li>
-<li>TestNet endpoint: <strong>wss://testnet.phemex.com/ws</strong></li>
+<li>TestNet endpoint: <strong>wss://testnet-api.phemex.com/md</strong></li>
 </ul></li>
 <li>Phemex provides HTTP Rest API for client to operate Orders, all endpoints return a JSON object.</li>
 </ul>
