deploy: 652f6bb9de6e67b5584ff9d3cde72a6dae69efbe

--- a/index.html
+++ b/index.html
@@ -2735,6 +2735,11 @@ Because the number of interfaces in Other group may grow over time, the list bel
 <td>TE_BO_ABORT_BOTP_DUE_BOPO_CANCELED</td>
 <td>Cancel bracket take profit order due main order canceled.</td>
 </tr>
+<tr>
+<td>11143</td>
+<td>TE_RPI_NOT_APPROVED_MARKET_MAKER</td>
+<td>RPI orders are exclusively available to approved market makers.</td>
+</tr>
 </tbody></table>
 <h1 id='coin-m-perpetual-rest-api'>COIN-M Perpetual REST API</h1>
 <p><a id="contract_symbols"></a></p>
