deploy: 8b0774146fd5d1d4a94aced12b576fbaf8744825

--- a/index.html
+++ b/index.html
@@ -2740,6 +2740,11 @@ Because the number of interfaces in Other group may grow over time, the list bel
 <td>TE_RPI_NOT_APPROVED_MARKET_MAKER</td>
 <td>RPI orders are exclusively available to approved market makers.</td>
 </tr>
+<tr>
+<td>11150</td>
+<td>TE_OI_LIMIT_REDUCE_ONLY</td>
+<td>Current symbol has reached maximum open interest, only reduce orders are accepted.</td>
+</tr>
 </tbody></table>
 <h1 id='coin-m-perpetual-rest-api'>COIN-M Perpetual REST API</h1>
 <p><a id="contract_symbols"></a></p>
