deploy: fbb7ff577fec1376bc6fade0e32ca7f5dc99efeb

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       gtag('config', 'UA-158616893-1');
     </script>
 
-    <link href="images/favicon-8cb6aab0.ico" rel="icon" type="image/ico" />
+    <link href="https://static.phemex.com/s/home/logo/favicon-v4.ico" rel="icon" type="image/ico" />
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -659,7 +659,7 @@
     </a>
     <div class="toc-wrapper">
         <a href="https://phemex.com" class="logo-link" target="_self">
-          <img src="images/logo-e10cba0f.svg" class="logo" alt="" />
+          <img src="images/logo-v1-0654f29a.svg" class="logo" alt="" />
         </a>
         <div class="logo-subtitle">API Reference</div>
         <div class="search">
